[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui-bits/Alert.gd" type="Script" id=1]
[ext_resource path="res://sounds/error.wav" type="AudioStream" id=2]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "slide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ -0.2, 0.05 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ -0.2, 0.05 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}

[node name="Alert" type="Label"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.2
anchor_top = 0.95
anchor_right = -0.2
anchor_bottom = 0.95
margin_top = -17.0
margin_right = 83.0
rect_scale = Vector2( 0.6, 0.6 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sample Text"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide = SubResource( 1 )

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="UserInputWarning" type="HBoxContainer" parent="."]
margin_left = -9.0
margin_top = -35.0
margin_right = 146.0
margin_bottom = -18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Press" type="Label" parent="UserInputWarning"]
margin_right = 45.0
margin_bottom = 17.0
text = "Press  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" type="Label" parent="UserInputWarning"]
margin_left = 49.0
margin_right = 86.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter"

[node name="ColorRect" type="ColorRect" parent="UserInputWarning/Keyboard"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller" type="Label" parent="UserInputWarning"]
visible = false
margin_left = 49.0
margin_right = 58.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Y"

[node name="ColorRect" type="ColorRect" parent="UserInputWarning/Controller"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = 2.0
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToContinue" type="Label" parent="UserInputWarning"]
margin_left = 90.0
margin_right = 171.0
margin_bottom = 17.0
text = "  to continue"

[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
